# Theseus.jl

./: .gitignore  Project.toml  README.md  check_mooncake.jl  mooncake_only_test.jl  test_conv.jl  test_ldl_matrix.jl  workplan.md
.github/workflows/: CI.yml  docs.yml  rust.yml
csharp/: GRASSHOPPER_INTEGRATION.md
csharp/Theseus.Interop/: TheseusInterop.cs  TheseusSolver.cs
csharp/Theseus.Tests/: Program.cs  Theseus.Tests.csproj
docs/: Manifest.toml  Project.toml  api.md  copy_deps.jl  make.jl  readme.md
docs/src/: api.md  index.md
docs/src/api/: functions.md  objectives.md  types.md
docs/src/concepts/: fdm.md  objectives.md  optimization.md
examples/: test_network.json
rust/: Cargo.toml
rust/src/: fdm.rs  ffi.rs  gradients.rs  lib.rs  objectives.rs  optimizer.rs  types.rs
rust/tests/: bench_release.rs  fd_gradient.rs  ffi_roundtrip.rs  integration.rs
src/: FDM.jl  Theseus.jl  adjoint.jl  analysis.jl  communication.jl  kernels.jl  objectives.jl  optimization.jl  testMooncake.jl  types.jl  utils.jl
test/: allocation_scaling.jl  benchmark_optimization.jl  debug_allocs.jl  debug_mystery.jl  example_optimization.jl  ldl_test.jl  mooncake_only_test.jl  performance_comparison.jl  performance_scaling.jl  refactor_phase1.jl  refactor_phase2.jl  refactor_phase3_step1.jl  refactor_phase3_step2.jl  refactor_phase3_step3.jl  runtests.jl  solver_comparison.jl  test_adjoints.jl  test_full_pipeline.jl
test/FDM/: runtests.jl
test/integration/: check_rules.jl  test_solve.jl
